--- a/app/assets/stylesheets/shared/_vars.scss
+++ b/app/assets/stylesheets/shared/_vars.scss
@@ -2,3 +2,4 @@ $radius: 3px;
 $round: 1000px;
 $brand-font: 'Titillium Web', sans-serif;
 $body-font: 'Muli', sans-serif;
+$serif: 'Georgia', serif;
