--- a/app/assets/stylesheets/shared/_forms.scss
+++ b/app/assets/stylesheets/shared/_forms.scss
@@ -62,9 +62,9 @@
     @include border-radius;
     flex: 0 0 auto;
     flex-wrap: wrap;
-    padding: rem(10);
-    width: 25%;
-    background: $light;
+    // padding: rem(10);
+    width: 50%;
+    // background: $light;
     position: relative;
     cursor: pointer;
 
