--- a/app/assets/stylesheets/shared/_announcements.scss
+++ b/app/assets/stylesheets/shared/_announcements.scss
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: rem(20);
   right: rem(20);
-
+  z-index: 1000;
   .alert .icon, [role=alert] .icon { background: none; }
 
   &:hover {
