--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -27,9 +27,8 @@
     = form.text_field :email, id: :user_email, class:'form-control form-control-lg'
 
   .form-group.field.details
-    =user.bio
-    = form.label :bio
-    =react_component('Wysiwyg', {details: user.bio || ''})
+    =form.label :bio
+    =react_component('Wysiwyg', {body: user.bio || ''})
 
 
   .form-group.tags
