--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -51,8 +51,8 @@
     .row
       .col-6
         .form-group
-          = form.label :image_url, 'Video URL (Optional)'
-          = form.text_field :image_url, id: :post_image_url, class:'form-control form-control-lg'
+          = form.label :video_url, 'Video URL (Optional)'
+          = form.text_field :video_url, id: :post_video_url, class:'form-control form-control-lg'
       .col-6
         .form-group
           = form.label :action_url, 'Additional URL (Optional)'
