--- a/app/assets/stylesheets/shared/_tag-search-control.scss
+++ b/app/assets/stylesheets/shared/_tag-search-control.scss
@@ -66,7 +66,7 @@
       background: $white;
       @include border-radius;
       border:1px solid $ccc;
-
+      z-index: 1100;
       ul.react-autosuggest__suggestions-list {
         list-style: none;
         margin: 0;
