--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
     %script{:src => "//use.fontawesome.com/releases/v5.0.13/js/all.js", integrity:'sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe', crossorigin: 'anonymous'}
 
 
-    = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_pack_tag 'application', media: 'all'
 
     %link{:href => "/favs/apple-icon-57x57.png", :rel => "apple-touch-icon", :sizes => "57x57"}/
     %link{:href => "/favs/apple-icon-60x60.png", :rel => "apple-touch-icon", :sizes => "60x60"}/
@@ -61,7 +61,6 @@
     / BS Tour
     %script{:crossorigin => "anonymous", :src => "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/js/bootstrap-tour-standalone.min.js"}
 
-    = javascript_include_tag 'application'
     = javascript_pack_tag 'application'
 
 
