Use CDNd stylesheet

--- a/app/views/layouts/poster.html.haml
+++ b/app/views/layouts/poster.html.haml
@@ -8,7 +8,7 @@
     %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/css/bootstrap-tour-standalone.min.css", :rel => "stylesheet"}
 
     / Hendrick Apps Global CSS
-    %link{:href => "//v2-styleguide.hendrickapps.com/assets/stylesheets/main.bundle-65e82859.css", :rel => "stylesheet"}
+    %link{:href => "//cdn.hendrickapps.com/assets/stylesheets/main.bundle-65e82859.css", :rel => "stylesheet"}
 
     / Google Fonts
     %link{:href => "//fonts.googleapis.com/css?family=Titillium+Web:300,700|Muli:300,300i,700,900,900i", :rel => "stylesheet"}
